// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Break control of size \${sizing} 1`] = `
<Break__BreakView
  className="ui-break"
  fontSize="0.24975000000000003rem"
  sizing="xxsmall"
  style={Object {}}
>
  ​
</Break__BreakView>
`;

exports[`Test creation of a Break control of size \${sizing} 2`] = `
Array [
  <Break__BreakView
    className="ui-break"
    fontSize="0.333rem"
    sizing="xsmall"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.333rem"
    sizing="xsmall"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
]
`;

exports[`Test creation of a Break control of size \${sizing} 3`] = `
Array [
  <Break__BreakView
    className="ui-break"
    fontSize="0.49950000000000006rem"
    sizing="small"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.49950000000000006rem"
    sizing="small"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.49950000000000006rem"
    sizing="small"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
]
`;

exports[`Test creation of a Break control of size \${sizing} 4`] = `
Array [
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="normal"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="normal"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="normal"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="normal"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
]
`;

exports[`Test creation of a Break control of size \${sizing} 5`] = `
Array [
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="medium"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="medium"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="medium"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="medium"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="medium"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
]
`;

exports[`Test creation of a Break control of size \${sizing} 6`] = `
Array [
  <Break__BreakView
    className="ui-break"
    fontSize="0.9990000000000001rem"
    sizing="large"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.9990000000000001rem"
    sizing="large"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.9990000000000001rem"
    sizing="large"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.9990000000000001rem"
    sizing="large"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.9990000000000001rem"
    sizing="large"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.9990000000000001rem"
    sizing="large"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
]
`;

exports[`Test creation of a Break control of size \${sizing} 7`] = `
Array [
  <Break__BreakView
    className="ui-break"
    fontSize="1.332rem"
    sizing="xlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.332rem"
    sizing="xlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.332rem"
    sizing="xlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.332rem"
    sizing="xlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.332rem"
    sizing="xlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.332rem"
    sizing="xlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.332rem"
    sizing="xlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
]
`;

exports[`Test creation of a Break control of size \${sizing} 8`] = `
Array [
  <Break__BreakView
    className="ui-break"
    fontSize="1.9980000000000002rem"
    sizing="xxlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.9980000000000002rem"
    sizing="xxlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.9980000000000002rem"
    sizing="xxlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.9980000000000002rem"
    sizing="xxlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.9980000000000002rem"
    sizing="xxlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.9980000000000002rem"
    sizing="xxlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.9980000000000002rem"
    sizing="xxlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="1.9980000000000002rem"
    sizing="xxlarge"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
]
`;

exports[`Test creation of a Break control of size \${sizing} 9`] = `
Array [
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
  <Break__BreakView
    className="ui-break"
    fontSize="0.666rem"
    sizing="inherit"
    style={Object {}}
  >
    ​
  </Break__BreakView>,
]
`;
